@@ -1,3 +1,7 @@
+2008-05-01  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Added a Lurk/Unlurk context menu on the entry widget
+
 2008-04-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Added Shift-Key-Up/Down bindings to the entry to
